🐛Fix: Trailer controls not showing

--- a/src/Components/TrailerModal/TrailerModal.module.scss
+++ b/src/Components/TrailerModal/TrailerModal.module.scss
@@ -13,3 +13,8 @@
         text-overflow: ellipsis;
     }
 }
+
+.player {
+    width: 100%;
+    height: calc(100% - 66px);
+}
